Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120230

'coffee' fails when cross-compiling on Windows

XMLWordPrintable

    • Android
    • 37ceea97b (dev), 1b7a6dc48 (6.6), 5f1445341 (6.7)
    • 2023wk50FOQtforAndroid, 2023wk52FOQtforAndroid, 2024wk02FOQtforAndroid

      When trying to build via CLI 'coffee' application from Windows it fails with:

      coffee: [82/82] Linking CXX executable coffeeFAILED: coffee  (Screenshot taken from the desktop is invalid)
      cmd.exe /C "cd . && C:\Users\qt\RTA\B2Qt_6.7.0\6.7.0\Boot2Qt\jetson-agx-xavier-devkit\toolchain\sysroots\x86_64-w64-mingw32\usr\bin\aarch64-poky-linux\aarch64-poky-linux-g++.exe --sysroot=C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux -march=armv8-a+crc -mbranch-protection=standard -fstack-protector-strong   -Wformat -Wformat-security -Werror=format-security --sysroot=C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux -Wl,-O1 -Wl,--hash-style=gnu -Wl,--as-needed  -Wl,-z,relro,-z,now CMakeFiles/coffee.dir/coffee_autogen/mocs_compilation.cpp.o CMakeFiles/coffee.dir/main.cpp.o CMakeFiles/coffee.dir/coffee_qmltyperegistrations.cpp.o CMakeFiles/coffee.dir/.rcc/qrc_qmake_Coffee.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_qmlcache_loader.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_ApplicationFlow_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_ApplicationFlowForm.ui_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_ChoosingCoffee_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_CoffeeCard_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_Colors_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_CustomButton_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_CustomSlider_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_CustomToolBar_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_Cup_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_Home_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_Insert_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_main_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_Progress_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_Ready_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qmlcache/coffee_Settings_qml.cpp.o CMakeFiles/coffee.dir/.rcc/qrc_coffee_raw_qml_0.cpp.o -o coffee  -Wl,-rpath,$ORIGIN:$ORIGIN/../lib  C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux/usr/lib/libQt6Quick.so.6.7.0  C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux/usr/lib/libQt6QmlModels.so.6.7.0  C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux/usr/lib/libQt6Qml.so.6.7.0  C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux/usr/lib/libQt6QmlBuiltins.a  C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux/usr/lib/libQt6Network.so.6.7.0  C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux/usr/lib/libQt6OpenGL.so.6.7.0  C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux/usr/lib/libQt6Gui.so.6.7.0  C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux/usr/lib/libQt6Core.so.6.7.0  C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux/usr/lib/libGLESv2.so  C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/armv8a-poky-linux/usr/lib/libEGL.so && cd ."
      C:/Users/qt/RTA/B2Qt_6.7.0/6.7.0/Boot2Qt/jetson-agx-xavier-devkit/toolchain/sysroots/x86_64-w64-mingw32/usr/bin/aarch64-poky-linux/../../libexec/aarch64-poky-linux/gcc/aarch64-poky-linux/13.2.0/ld.exe: cannot open output file coffee: Permission denied
      collect2.exe: error: ld returned 1 exit status
      ninja: build stopped: subcommand failed. 

        For Gerrit Dashboard: QTBUG-120230
        # Subject Branch Project Status CR V

            koalajar Konsta Alajärvi
            mipohjan Milla Pohjanheimo
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes