Rename Coffee Machine example QML module and .qrc file

Renamed QML module and .qrc file in Coffee Machine example, because
using same name for application and QML module causes errors.

Fixes: QTBUG-120230
Change-Id: Iacb73681df83236cf01e3bae75da748de4cf4875
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit 37ceea97b4dc54bde2954e5b19febec011b5000b)
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>