examples/demos/coffee/coffee.pro
@@ -6,7 +6,8 @@ CONFIG += c++11
 
 SOURCES += main.cpp
 
-RESOURCES += Coffee.qrc
+RESOURCES += \
+    coffeemachine.qrc
 
 # You can also make your code fail to compile if you use deprecated APIs.
 # In order to do so, uncomment the following line.
